# opengl-sdl3-project

./: .gitignore  CMakeLists.txt
assets/shaders/: triangle.frag  triangle.vert
include/: app.h
src/: app.cpp  main.cpp
